Xcos blocks: add pre/post simulation blocks
Change-Id: I997f3ba5b26816c14af51bd60a237158c9359688

--- a/scilab/modules/xcos/Makefile.in
+++ b/scilab/modules/xcos/Makefile.in
@@ -782,8 +782,10 @@ images/palettes/PID.png \
 images/palettes/PMOS.png \
 images/palettes/PNP.png \
 images/palettes/POSTONEG_f.png \
+images/palettes/post_simulate_block.png \
 images/palettes/PotentialSensor.png \
 images/palettes/POWBLK_f.png \
+images/palettes/pre_simulate_block.png \
 images/palettes/PROD_f.png \
 images/palettes/PRODUCT.png \
 images/palettes/PuitsP.png \
