management of ieee with division by zero.
Change-Id: I968fb253ea636e28fdb555322d30b856d2bdea28

--- a/scilab/modules/operations/Makefile.am
+++ b/scilab/modules/operations/Makefile.am
@@ -32,6 +32,7 @@ libscioperations_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 libscioperations_la_CFLAGS = \
     -I$(top_srcdir)/modules/operations/includes \
     -I$(top_srcdir)/modules/elementary_functions/includes \
+    -I$(top_srcdir)/modules/localization/includes \
     -I$(top_srcdir)/modules/output_stream/includes
 
 libscioperations_la_CXXFLAGS = \
