WIP: enable use of OS look&feel for uicontrols
Change-Id: I00b7338506e3839ade7a8c8099edb438ac05bbb4

--- a/scilab/modules/graphic_objects/src/scripts/propertiesMap.properties
+++ b/scilab/modules/graphic_objects/src/scripts/propertiesMap.properties
@@ -333,3 +333,5 @@
 @DECLARE@ __GO_PROGRESSIONBAR__ @EQUAL@         294 @END@
 @DECLARE@ __GO_UI_MESSAGE__ @EQUAL@             295 @END@
 @DECLARE@ __GO_UI_MESSAGE_SIZE__ @EQUAL@        296 @END@
+
+@DECLARE@ __GO_USEOSLOOKANDFEEL__ @EQUAL@      297 @END@
