enable graphics module
Change-Id: Ia01ed1a9274fc791a4a89d8cbdcad75e87732011

--- a/scilab/etc/modules.xml.in
+++ b/scilab/etc/modules.xml.in
@@ -50,5 +50,6 @@
     <module name="interpolation" activate="yes"/>
     <module name="cacsd" activate="yes"/>
     <module name="sound" activate="yes"/>
+    <module name="graphics" activate="@GUI_ENABLE@"/>
 </modules>
 
