--- a/scilab/modules/graphics/graphics.vcxproj.filters
+++ b/scilab/modules/graphics/graphics.vcxproj.filters
@@ -1010,9 +1010,6 @@
     <ClCompile Include="src\c\getHandleProperty\set_triangles_property.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\c\getHandleProperty\set_user_data_property.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\c\getHandleProperty\set_view_property.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -1107,6 +1104,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\c\getHandleProperty\set_figure_closerequestfcn_property.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\c\getHandleProperty\set_user_data_property.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1269,6 +1269,7 @@
     <None Include="Elementary_functions_f_Import.def">
       <Filter>Libraries Dependencies\Imports</Filter>
     </None>
+    <None Include="locales\graphics.pot" />
     <None Include="locales\graphics.pot" />
     <None Include="locales\graphics.pot" />
     <None Include="locales\graphics.pot" />
