--- a/scilab/etc/modules.xml.in
+++ b/scilab/etc/modules.xml.in
@@ -58,4 +58,5 @@
     <module name="graphic_export" activate="yes"/>
     <module name="operations" activate="yes"/>
     <module name="api_scilab" activate="yes"/>
+    <module name="polynomials" activate="yes"/>
 </modules>
