--- a/scilab/modules/uiwidget/uiwidget.vcxproj
+++ b/scilab/modules/uiwidget/uiwidget.vcxproj
@@ -89,7 +89,7 @@
     </PreLinkEvent>
     <Link>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(SolutionDir)bin\$(ProjectName).dll</OutputFile>
+      <OutputFile>$(SolutionDir)bin\sci$(ProjectName).dll</OutputFile>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -119,7 +119,7 @@
     </PreLinkEvent>
     <Link>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(SolutionDir)bin\$(ProjectName).dll</OutputFile>
+      <OutputFile>$(SolutionDir)bin\sci$(ProjectName).dll</OutputFile>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -150,7 +150,7 @@
     </PreLinkEvent>
     <Link>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(SolutionDir)bin\$(ProjectName).dll</OutputFile>
+      <OutputFile>$(SolutionDir)bin\sci$(ProjectName).dll</OutputFile>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
       <GenerateDebugInformation>false</GenerateDebugInformation>
@@ -186,7 +186,7 @@
     </PreLinkEvent>
     <Link>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(SolutionDir)bin\$(ProjectName).dll</OutputFile>
+      <OutputFile>$(SolutionDir)bin\sci$(ProjectName).dll</OutputFile>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
       <GenerateDebugInformation>false</GenerateDebugInformation>
@@ -202,13 +202,13 @@
   <ItemGroup>
     <ClInclude Include="includes\dynlib_uiwidget_scilab.h" />
     <ClInclude Include="includes\gw_uiwidget.h" />
+    <ClInclude Include="includes\UIWidget.h" />
     <ClInclude Include="src\cpp\UIWidgetTools.hxx" />
     <ClInclude Include="src\cpp\UserDataHandler.hxx" />
     <ClInclude Include="src\jni\UIWidget.hxx" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sci_gateway\cpp\sci_percent_foo_i_UIWidget.cpp" />
-    <ClCompile Include="sci_gateway\cpp\sci_percent_UIWidget_e.cpp" />
+    <ClCompile Include="sci_gateway\cpp\sci_createUIWidgetHandle.cpp" />
     <ClCompile Include="sci_gateway\cpp\sci_uiget.cpp" />
     <ClCompile Include="sci_gateway\cpp\sci_uiset.cpp" />
     <ClCompile Include="sci_gateway\cpp\sci_uiwidget.cpp" />
