--- a/scilab/modules/graphics/Makefile.in
+++ b/scilab/modules/graphics/Makefile.in
@@ -476,7 +476,7 @@ am__objects_2 = libscigraphics_la-sci_swap_handles.lo \
 	libscigraphics_la-sci_matplot.lo \
 	libscigraphics_la-sci_drawaxis.lo \
 	libscigraphics_la-sci_demo.lo libscigraphics_la-sci_plot2d1.lo \
-	libscigraphics_la-sci_xrect.lo libscigraphics_la-sci_draw.lo \
+	libscigraphics_la-sci_xrect.lo \
 	libscigraphics_la-sci_xarrows.lo \
 	libscigraphics_la-sci_plot3d.lo libscigraphics_la-sci_move.lo \
 	libscigraphics_la-sci_copy.lo \
@@ -1139,7 +1139,6 @@ sci_gateway/c/sci_drawaxis.c \
 sci_gateway/c/sci_demo.c \
 sci_gateway/c/sci_plot2d1.c \
 sci_gateway/c/sci_xrect.c \
-sci_gateway/c/sci_draw.c \
 sci_gateway/c/sci_xarrows.c \
 sci_gateway/c/sci_plot3d.c \
 sci_gateway/c/sci_move.c \
@@ -1743,7 +1742,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_copy.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_delete.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_demo.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_draw.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_drawaxis.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_drawlater.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscigraphics_la-sci_drawnow.Plo@am__quote@
@@ -4156,13 +4154,6 @@ libscigraphics_la-sci_xrect.lo: sci_gateway/c/sci_xrect.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='sci_gateway/c/sci_xrect.c' object='libscigraphics_la-sci_xrect.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscigraphics_la_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o libscigraphics_la-sci_xrect.lo `test -f 'sci_gateway/c/sci_xrect.c' || echo '$(srcdir)/'`sci_gateway/c/sci_xrect.c
-
-libscigraphics_la-sci_draw.lo: sci_gateway/c/sci_draw.c
-@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscigraphics_la_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT libscigraphics_la-sci_draw.lo -MD -MP -MF $(DEPDIR)/libscigraphics_la-sci_draw.Tpo -c -o libscigraphics_la-sci_draw.lo `test -f 'sci_gateway/c/sci_draw.c' || echo '$(srcdir)/'`sci_gateway/c/sci_draw.c
-@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/libscigraphics_la-sci_draw.Tpo $(DEPDIR)/libscigraphics_la-sci_draw.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='sci_gateway/c/sci_draw.c' object='libscigraphics_la-sci_draw.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscigraphics_la_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o libscigraphics_la-sci_draw.lo `test -f 'sci_gateway/c/sci_draw.c' || echo '$(srcdir)/'`sci_gateway/c/sci_draw.c
 
 libscigraphics_la-sci_xarrows.lo: sci_gateway/c/sci_xarrows.c
 @am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscigraphics_la_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT libscigraphics_la-sci_xarrows.lo -MD -MP -MF $(DEPDIR)/libscigraphics_la-sci_xarrows.Tpo -c -o libscigraphics_la-sci_xarrows.lo `test -f 'sci_gateway/c/sci_xarrows.c' || echo '$(srcdir)/'`sci_gateway/c/sci_xarrows.c
