--- a/scilab/configure.ac
+++ b/scilab/configure.ac
@@ -705,15 +705,10 @@ SCILIBS_CFLAGS=''
 SCILIBS_CXXFLAGS=''
 SCILIBS_FFLAGS=''
 
-if test $IS_64_BITS_CPU = true -o "$MACOSX" = "1"; then
-   if test $f90compatible = false; then
-      AC_MSG_ERROR([64 bits support needs a fortran 90 compiler (try --with-gfortran).])
-   fi
    AC_DEFINE([USE_DYNAMIC_STACK], [], [If we are building a 64 bits version])
-fi
 
 AM_CONDITIONAL(IS_64_BITS_CPU, test $IS_64_BITS_CPU = true)
-AM_CONDITIONAL(USE_DYNAMIC_STACK, test $IS_64_BITS_CPU = true -o "$MACOSX" = "1")
+AM_CONDITIONAL(USE_DYNAMIC_STACK, true)
 
 ################
 ## SSE
@@ -1908,11 +1903,7 @@ AC_CONFIG_COMMANDS_POST([chmod +x $SCI_SRCDIR_FULL/modules/scicos_blocks/src/scr
 #fi
 
 # Generate stack.h
-if test "$IS_64_BITS_CPU" = true -o "$MACOSX" = "1"; then
    stack_h_cpp_flags=-DUSE_DYNAMIC_STACK
-else
-   stack_h_cpp_flags=
-fi
 
 AC_CONFIG_COMMANDS([modules/core/includes/stack.h],
   [if ! $CPP $stack_h_cpp_flags - < $srcdir/modules/core/includes/stack.h.in |\
