Modify access rules

--- a/project.config
+++ b/project.config
@@ -44,3 +44,5 @@
 [access "refs/heads/richelieu"]
 	push = +force group richelieu
 	read = deny group Anonymous Users
+	read = deny group Registered Users
+	read = group richelieu
