Modify access rules

--- a/project.config
+++ b/project.config
@@ -42,7 +42,10 @@
 [project]
 	state = active
 [access "refs/heads/richelieu"]
+	push = deny group Registered Users
 	push = +force group richelieu
 	read = deny group Anonymous Users
 	read = deny group Registered Users
 	read = group richelieu
+	forgeAuthor = deny group Registered Users
+	forgeAuthor = group richelieu
