Modify access rules

--- a/project.config
+++ b/project.config
@@ -43,7 +43,7 @@
 	state = active
 [access "refs/heads/richelieu"]
 	push = deny group Registered Users
-	push = +force group richelieu
+	push = group richelieu
 	read = deny group Anonymous Users
 	read = deny group Registered Users
 	read = group richelieu
