add support for complex-argument erf, erfc, erfcx, erfi, and dawson functions
Change-Id: I24ca39126a30e2df9c2ee689cb3a3a790290d547

--- a/scilab/modules/core/includes/machine.h.in
+++ b/scilab/modules/core/includes/machine.h.in
@@ -80,6 +80,12 @@
 /* Define to 1 if you have the `endpwent' function. */
 #undef HAVE_ENDPWENT
 
+/* Define to 1 if you have the `erf' function. */
+#undef HAVE_ERF
+
+/* Define to 1 if you have the `erfc' function. */
+#undef HAVE_ERFC
+
 /* Define to 1 if you have the `exp10' function. */
 #undef HAVE_EXP10
 
@@ -133,6 +139,12 @@
 
 /* Define to 1 if you have the `isascii' function. */
 #undef HAVE_ISASCII
+
+/* Have isinf function or macro equivalent */
+#undef HAVE_ISINF
+
+/* Define to 1 if you have the `isnan' function. */
+#undef HAVE_ISNAN
 
 /* Define to 1 if you have the `iswprint' function. */
 #undef HAVE_ISWPRINT
