--- a/scilab/modules/special_functions/Makefile.am
+++ b/scilab/modules/special_functions/Makefile.am
@@ -30,9 +30,12 @@ sci_gateway/c/sci_besselh.c \
 sci_gateway/c/sci_besseli.c \
 sci_gateway/c/sci_besselj.c \
 sci_gateway/c/sci_besselk.c \
-sci_gateway/c/sci_calerf.c \
 sci_gateway/c/gw_special_functions.c \
 sci_gateway/c/sci_lgamma.c
+
+GATEWAY_CXX_SOURCES = \
+sci_gateway/cpp/sci_faddeeva.cpp \
+sci_gateway/cpp/sci_faddeeva.hxx
 
 # Includes need for the compilation
 libscispecial_functions_la_CPPFLAGS = -I$(srcdir)/includes/ \
@@ -40,6 +43,7 @@ libscispecial_functions_la_CPPFLAGS = -I$(srcdir)/includes/ \
 -I$(top_srcdir)/libs/MALLOC/includes/ \
 -I$(top_srcdir)/modules/core/src/c/ \
 -I$(top_srcdir)/modules/elementary_functions/includes/ \
+-I$(top_srcdir)/modules/elementary_functions/src/cpp/ \
 -I$(top_srcdir)/modules/api_scilab/includes/ \
 -I$(top_srcdir)/modules/output_stream/includes/ \
 -I$(top_srcdir)/modules/localization/includes/ \
@@ -51,7 +55,7 @@ noinst_LTLIBRARIES = libscispecial_functions-algo.la
 
 
 libscispecial_functions_algo_la_SOURCES = $(SPECIAL_FUNCTIONS_C_SOURCES) $(SPECIAL_FUNCTIONS_FORTRAN_SOURCES) $(SPECIAL_FUNCTIONS_CXX_SOURCES)
-libscispecial_functions_la_SOURCES = $(GATEWAY_C_SOURCES)
+libscispecial_functions_la_SOURCES = $(GATEWAY_C_SOURCES) $(GATEWAY_CXX_SOURCES)
 libscispecial_functions_algo_la_CPPFLAGS = $(libscispecial_functions_la_CPPFLAGS)
 
 # For the code check (splint)
