Modify access rules

--- a/project.config
+++ b/project.config
@@ -49,3 +49,4 @@
 	read = group richelieu
 	forgeAuthor = deny group Registered Users
 	forgeAuthor = group richelieu
+	forgeCommitter = group richelieu
