--- a/scilab/modules/scicos/src/c/scicos.vcxproj.filters
+++ b/scilab/modules/scicos/src/c/scicos.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="lsodar.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ddaskr.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\sci_gateway\c\sci_buildouttb.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -215,6 +218,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="lsodar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ddaskr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\includes\scicos-def.h">
