Bug 11363 fixed: show_window did not work.
Change-Id: Ibfdb3fcac37a9a1a7d11766dedfb552594d2759e

--- a/scilab/modules/graphics/Makefile.am
+++ b/scilab/modules/graphics/Makefile.am
@@ -485,6 +485,7 @@ libscigraphics_disable_la_CPPFLAGS = \
 	-I$(top_srcdir)/modules/localization/includes/ \
 	-I$(top_srcdir)/modules/output_stream/includes/ \
 	-I$(top_srcdir)/modules/string/includes/ \
+	-I$(top_srcdir)/modules/gui/includes/ \
 	$(AM_CPPFLAGS)
 
 # endif
