--- a/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj.filters
+++ b/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="dcutet.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ddaskr.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="ddasrt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -109,6 +112,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\sci_gateway\fortran\Ex-bvode.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\sci_gateway\fortran\Ex-daskr.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\sci_gateway\fortran\Ex-dasrt.c">
@@ -276,6 +282,9 @@
     <ClCompile Include="..\..\sci_gateway\fortran\sci_f_bvode.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\sci_gateway\fortran\sci_f_daskr.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\sci_gateway\fortran\sci_f_dasrt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -359,6 +368,12 @@
     <f2c_rule Include="dcutet.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
+    <f2c_rule Include="ddaskr.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
+    <f2c_rule Include="daux.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
     <f2c_rule Include="ddasrt.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
@@ -381,6 +396,9 @@
       <Filter>Fortran files</Filter>
     </f2c_rule>
     <f2c_rule Include="..\..\sci_gateway\fortran\Ex-bvode.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
+    <f2c_rule Include="..\..\sci_gateway\fortran\Ex-daskr.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
     <f2c_rule Include="..\..\sci_gateway\fortran\Ex-dasrt.f">
@@ -546,6 +564,9 @@
       <Filter>Fortran files</Filter>
     </f2c_rule>
     <f2c_rule Include="..\..\sci_gateway\fortran\sci_f_bvode.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
+    <f2c_rule Include="..\..\sci_gateway\fortran\sci_f_daskr.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
     <f2c_rule Include="..\..\sci_gateway\fortran\sci_f_dasrt.f">
