--- a/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj.filters
+++ b/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj.filters
@@ -359,6 +359,12 @@
     <f2c_rule Include="dcutet.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
+    <f2c_rule Include="ddaskr.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
+    <f2c_rule Include="daux.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
     <f2c_rule Include="ddasrt.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
