ODEPACK solvers: 'ddaskr' implementation
Change-Id: I594e7d875ca9f42b63fe521d379492ecac496821

--- a/scilab/modules/differential_equations/Makefile.am
+++ b/scilab/modules/differential_equations/Makefile.am
@@ -62,6 +62,8 @@ src/fortran/vmnorm.f \
 src/fortran/prepj.f \
 src/fortran/lsdisc.f \
 src/fortran/fnorm.f \
+src/fortran/ddaskr.f \
+src/fortran/daux.f \
 src/fortran/ddasrt.f \
 src/fortran/stodi.f \
 src/fortran/xsetun.f \
