--- a/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj
+++ b/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj
@@ -301,6 +301,8 @@ cd ..
     <ClCompile Include="colnew.c" />
     <ClCompile Include="..\c\commons_f2c.c" />
     <ClCompile Include="dcutet.c" />
+    <ClCompile Include="ddaskr.c" />
+    <ClCompile Include="daux.c" />
     <ClCompile Include="ddasrt.c" />
     <ClCompile Include="ddassl.c" />
     <ClCompile Include="dgbsl.c" />
@@ -393,6 +395,8 @@ cd ..
     <f2c_rule Include="cfode.f" />
     <f2c_rule Include="colnew.f" />
     <f2c_rule Include="dcutet.f" />
+    <f2c_rule Include="ddaskr.f" />
+    <f2c_rule Include="daux.f" />
     <f2c_rule Include="ddasrt.f" />
     <f2c_rule Include="ddassl.f" />
     <f2c_rule Include="dgbsl.f" />
