--- a/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj.filters
+++ b/scilab/modules/differential_equations/src/fortran/differential_equations_f2c.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClCompile Include="dcutet.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ddaskr.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="daux.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="ddasrt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -357,6 +363,12 @@
       <Filter>Fortran files</Filter>
     </f2c_rule>
     <f2c_rule Include="dcutet.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
+    <f2c_rule Include="ddaskr.f">
+      <Filter>Fortran files</Filter>
+    </f2c_rule>
+    <f2c_rule Include="daux.f">
       <Filter>Fortran files</Filter>
     </f2c_rule>
     <f2c_rule Include="ddasrt.f">
