Graphics: add the possibility to make scatter plot with different mark colors
Change-Id: I4d48b5e0e2cb78fa46855a6b1c997ad4a55a9916

--- a/scilab/modules/graphics/Makefile.am
+++ b/scilab/modules/graphics/Makefile.am
@@ -299,6 +299,8 @@ src/c/getHandleProperty/set_figure_resizefcn_property.c \
 src/c/getHandleProperty/get_figure_resizefcn_property.c \
 src/c/getHandleProperty/set_figure_closerequestfcn_property.c \
 src/c/getHandleProperty/get_figure_closerequestfcn_property.c \
+src/c/getHandleProperty/set_colors_property.c \
+src/c/getHandleProperty/get_colors_property.c \
 src/c/DefaultCommandArg.c \
 src/c/Axes.c \
 src/c/sciMatrix.c \
